--- a/atelier_2/atelier2/app/src/main/AndroidManifest.xml
+++ b/atelier_2/atelier2/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.seminaire.ateliers.atelier1">
+    package="com.seminaire.ateliers.atelier2">
 
     <application
         android:allowBackup="true"
@@ -10,15 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".NormalActivity"
+            android:name="com.seminaire.ateliers.atelier2.NormalActivity"
             android:label="@string/app_name"
-            android:parentActivityName=".BaseActivity">
+            android:parentActivityName="com.seminaire.ateliers.atelier2.BaseActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BaseActivity"/>
+        <activity android:name="com.seminaire.ateliers.atelier2.BaseActivity"/>
     </application>
 
 </manifest>
